[RELEASE] prepare for 1.4.0 release
git-svn-id: https://svn.parrot.org/parrot/trunk@40184 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,16 @@
 #1 $Id$
 
+2009.7.21     cotto
+	* Released 1.4.0
+	See NEWS for more.
+
 2009.06.16    Whiteknight
-        * Released 1.3.0
-        Ses NEWS for more.
+	* Released 1.3.0
+	Ses NEWS for more.
 
 2009.05.19    Infinoid
-        * Released 1.2.0
-        See NEWS for more.
+	* Released 1.2.0
+	See NEWS for more.
 
 2009.04.21    fperrad
 	* Released 1.1.0
