[bsr_jsr_ret] update more files, including ripping out some now-unused code from IMCC
git-svn-id: https://svn.parrot.org/parrot/branches/bsr_jsr_ret@40241 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/compilers/pge/README.pod
+++ b/compilers/pge/README.pod
@@ -118,8 +118,7 @@ Perl 6 regex.  The parse tree then goes through semantic analysis
 and reduction phases before being sent to code generation to
 produce a PIR subroutine.
 
-The generated PIR code uses bsr/ret for its internal backtracking
-(optimized for tailcalls) and uses Parrot calling conventions for
+The generated PIR code uses Parrot calling conventions for
 all interfaces with external callers/callees such as subrules.
 
 PGE also uses Parrot coroutines for the matching
