--- a/ports/debian/changelog
+++ b/ports/debian/changelog
@@ -4,8 +4,7 @@ parrot (1.4.0-1) unstable; urgency=low
     - New upstream configuration option --disable-rpath allows packages to
       be built without rpath.
   * parrot-devel.install.in
-    - Install pbc_to_exe binary and supporting library. Runtime
-      error was fixed upstream.
+    - Install pbc_to_exe binary and supporting library.
 
  -- Allison Randal <allison@parrot.org>  Fri, 24 Jul 2009 23:54:07 -0700
 
