[ubuntu] Since there are no longer any changes specific to Ubuntu, the process becomes a sync instead of a merge.
git-svn-id: https://svn.parrot.org/parrot/trunk@40277 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/ports/ubuntu/changelog
+++ b/ports/ubuntu/changelog
@@ -1,6 +1,6 @@
 parrot (1.4.0-1ubuntu1) karmic; urgency=low
-  * Merge from Debian unstable.
-  * Remove lpia patch, upstream fix included in new release.
+  * Synchronize with Debian unstable.
+  * Removes lpia patch, upstream fix included in new release.
 
  -- Allison Randal <allison@parrot.org>  Sat, 25 Jul 2009 08:37:52 -0700
 
