[pmc2c] rip out DYNSUPER, which isn't needed now that it and SUPER act the same
git-svn-id: https://svn.parrot.org/parrot/trunk@40316 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/pmc2c.pod
+++ b/docs/pmc2c.pod
@@ -185,11 +185,7 @@ C<OtherClass>.
 =item C<SUPER(a,b,c)>
 
 Calls the overridden implementation of the current method in the nearest
-superclass, using the static type of C<SELF>.
-
-=item C<DYNSUPER(a,b,c)>
-
-As above, but uses the actual dynamic type of C<SELF>.
+superclass, using the type of C<SELF>.
 
 =back
 
