[TT #895] Add some new experimental functions to the GC to help with automatic management of fixed-size structure allocations. Untested. Testing these things depends on future changes described in that ticket. Will be removed if not used and properly tested when that ticket is closed
git-svn-id: https://svn.parrot.org/parrot/trunk@40368 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -202,6 +202,14 @@ check in 1.4 or 2.0 for the new names.
 
 L<https://trac.parrot.org/parrot/ticket/443>
 
+=item PMC Attributes Allocation Functions [experimental]
+
+ Parrot_gc_allocate_pmc_attributes
+ Parrot_gc_free_pmc_attributes
+
+These items and related helper functions are added as experimental support
+for TT #895
+
 =back
 
 =head1 Compiler tools
