[ubuntu] Change to more common changelog entry.
git-svn-id: https://svn.parrot.org/parrot/trunk@40439 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/project/ubuntu_packaging_guide.pod
+++ b/docs/project/ubuntu_packaging_guide.pod
@@ -67,7 +67,7 @@ use the target Ubuntu distribution ('intrepid').
 
 The changelog entry for the Ubuntu release is generally:
 
-  * Resynchronize with Debian unstable.
+  * Synchronize with Debian unstable.
 
 Add any custom changes for Ubuntu packaging (rare). The final line gives the
 maintainer's name, email address, and the date. The date must be in RFC822
