[embed] Correct function signature in the docs for Parrot_str_to_cstring
git-svn-id: https://svn.parrot.org/parrot/trunk@40446 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/embed.pod
+++ b/docs/embed.pod
@@ -276,7 +276,7 @@ is unclear.
 Returns the internal type number corresponding to C<type>.  Useful for
 instantiating various Parrot data types.
 
-=item C<char *Parrot_str_to_cstring(PARROT_INTERP)>
+=item C<char *Parrot_str_to_cstring(PARROT_INTERP, const STRING *s)>
 
 XXX needs to be a formal Parrot_* API.
 Returns the C string representation of a Parrot string.
