--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -114,6 +114,10 @@ L<https://trac.parrot.org/parrot/ticket/451>
 
 [Nothing at this time.]
 
+=head1 Debugger
+
+Assigning to registers [experimental]
+
 =head1 PIR syntax
 
 =over 4
