--- a/docs/debugger.pod
+++ b/docs/debugger.pod
@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2006, Parrot Foundation.
+# Copyright (C) 2001-2009, Parrot Foundation.
 # $Id$
 
 =head1 NAME
@@ -38,8 +38,9 @@ To start the debugger type:
 
   parrot_debugger file.pbc
 
-That is, F<parrot_debugger> takes exactly one argument, which is the Parrot bytecode that
-you're going to debug. F<parrot_debugger> will automatically load and disassemble the
+That is, F<parrot_debugger> takes exactly one argument, which is the Parrot file that
+you're going to debug. This file may be Parrot bytecode (*.pbc), PASM source code (*.pasm)
+or PIR (*.pir). F<parrot_debugger> will automatically load and disassemble the
 bytecode file for you.
 
 Note that you can't pass command line arguments to your program when you invoke
@@ -235,6 +236,8 @@ before stopping again.
 
 =item eval (e)
 
+The eval command is currently unimplemeneted.
+
 Run an instruction. The syntax is:
 
   eval INSTRUCTION
@@ -297,54 +300,24 @@ Looks up the given (integer- or string-valued) key in a PMC register.
 
 For PMC registers, the command will print the number, the class of the PMC (in
 square brackets) and its string representation (when available). It prints
-<null pmc> for uninitialized PMC registers.
+<PMCNULL> for uninitialized PMC registers.
 
-Example:
+Examples:
 
   # prints the content of I2
   (pdb) p i2
-  Integer Registers:
   I2 =              0
 
   # prints the content of P0
   (pdb) p P0
-  PMC Registers:
   P0 = [ResizablePMCArray]
 
   # prints the content of all string registers
   (pdb) p s
-  String Registers:
-   0 =
-          Buflen  =                  4
-          Flags   =                  0
-          Bufused =                  4
-          Strlen  =                  4
-          Offset  =                  0
-          String  =       Just
-   1 =
-          Buflen  =                  8
-          Flags   =                  0
-          Bufused =                  7
-          Strlen  =                  7
-          String  =       another
-   2 =
-          Buflen  =                  8
-          Flags   =                  0
-          Bufused =                  6
-          Strlen  =                  6
-          String  =       Parrot
-   3 =
-          Buflen  =                  8
-          Flags   =                  0
-          Bufused =                  6
-          Strlen  =                  6
-          String  =       hacker
-   4 =
-   5 =
-   6 =
-   7 =
-   8 =
-   # ... and so on
+   S0 = Just
+   S1 = Another
+   S2 = Parrot
+   S3 = Hacker
 
 =item info
 
