--- a/docs/book/pir/ch04_variables.pod
+++ b/docs/book/pir/ch04_variables.pod
@@ -188,7 +188,7 @@ it's true and the second argument otherwise:
 =end PIR_FRAGMENT
 
 Both C<and> and C<or> are short-circuiting ops. If they can determine what
-value to return from the first argument, they'll never evaluate the third.
+value to return from the first argument, they'll never evaluate the second.
 This is significant only for PMCs, as they might have side effects on
 evaluation.
 
@@ -1785,7 +1785,7 @@ namespace, just like the C<get_namespace> opcode:
 
   $P1 = $P0.'find_namespace'("Duck")
 
-The C<add_namespace>C<add_namespace method> method adds a new namespace
+The C<add_namespace>X<add_namespace method> method adds a new namespace
 as a child of the namespace object:
 
   $P0.'add_namespace'($P1)
