Update docs WRT PASM1
git-svn-id: https://svn.parrot.org/parrot/trunk@40621 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -210,7 +210,8 @@ L<https://trac.parrot.org/parrot/ticket/872>
 
 =item C<PASM1 compiler> [eligible in 2.1]
 
-See PDB_compile.
+See PDB_compile. Note that the current version of the C<PASM1> compiler
+issues a warning and is not functional. (However, it used to segfault.)
 
 =back
 
