--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 #1 $Id$
 
+2009.8.18     Whiteknight
+    * Released 1.5.0
+    See NEWS for more.
+
 2009.7.21     cotto
 	* Released 1.4.0
 	See NEWS for more.
