--- a/docs/parrothist.pod
+++ b/docs/parrothist.pod
@@ -94,5 +94,7 @@ Francois Perrad.
  Whiteknight 1.3.0          2009-Jun-16     "Andean Swift"
 
  cotto       1.4.0          2009-Jul-21     "Mundo Cani"
+ Whiteknight 1.5.0          2009-Aug-18     "TEH PARROTZ!"
+ 
 
 =cut
