Adding dukeleto++ as release manager for Oct
git-svn-id: https://svn.parrot.org/parrot/trunk@40632 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/project/release_manager_guide.pod
+++ b/docs/project/release_manager_guide.pod
@@ -365,7 +365,7 @@ The starred releases are Parrot's twice-yearly supported releases, see
 F<docs/project/support_policy.pod>.
 
  - Sept 15, 2009     - 1.6  - particle
- - Oct 20, 2009      - 1.7  -
+ - Oct 20, 2009      - 1.7  - dukeleto
  - Nov 17, 2009      - 1.8  -
  - Dec 15, 2009      - 1.9  -
  - Jan 19, 2010      - 2.0* -
