[RELEASE] gerd++ is going to take release 1.9
git-svn-id: https://svn.parrot.org/parrot/trunk@40657 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/project/release_manager_guide.pod
+++ b/docs/project/release_manager_guide.pod
@@ -367,7 +367,7 @@ F<docs/project/support_policy.pod>.
  - Sept 15, 2009     - 1.6  - particle
  - Oct 20, 2009      - 1.7  - dukeleto
  - Nov 17, 2009      - 1.8  -
- - Dec 15, 2009      - 1.9  -
+ - Dec 15, 2009      - 1.9  - gerd
  - Jan 19, 2010      - 2.0* -
 
 =cut
