--- a/docs/project/release_manager_guide.pod
+++ b/docs/project/release_manager_guide.pod
@@ -366,7 +366,7 @@ F<docs/project/support_policy.pod>.
 
  - Sept 15, 2009     - 1.6  - particle
  - Oct 20, 2009      - 1.7  - dukeleto
- - Nov 17, 2009      - 1.8  -
+ - Nov 17, 2009      - 1.8  - bernhard
  - Dec 15, 2009      - 1.9  - gerd
  - Jan 19, 2010      - 2.0* -
 
