[pmc_sans_unionval] merge this branch into trunk. Resolves TT #549
git-svn-id: https://svn.parrot.org/parrot/trunk@40726 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/pdds/pdd09_gc.pod
+++ b/docs/pdds/pdd09_gc.pod
@@ -299,8 +299,7 @@ an Arenas struct.
 The Arenas structure contains pointers to a variety of memory pools, each used
 for a specific purpose. Two are Memory_Pool pointers (memory_pool,
 constant_string_pool), and six are Small_Object_Pool structures (pmc_pool,
-pmc_ext_pool, constant_pmc_pool, buffer_header_pool,
-constant_string_header_pool).
+constant_pmc_pool, constant_string_header_pool).
 
 The Arenas structure holds function pointers for the core defined interface of
 the currently active GC subsystem: C<init_pool>, C<do_gc_mark>,
