[docs] Update documentation in editor/README.pod regarding generating tags
git-svn-id: https://svn.parrot.org/parrot/trunk@40772 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/editor/README.pod
+++ b/editor/README.pod
@@ -85,11 +85,19 @@ using tabs in the pasm mode.
 =head2 TAGS file
 
 There is a script here to automatically generate a TAGS file, which works with
-Vim and other editors that recognize ctags-format files. The tool "exuberant
-ctags" is required. Run
+Vim and other editors that recognize ctags-format files. Run
 
-  make tags
+  make tags-vi
 
-in the parrot root directory to build the tags file.
+for Vim-compatible tags or
+
+  make tags-emacs
+
+for Emacs-style tags.  The tool "exuberant ctags" is required for both. There
+is also the
+
+  make tags-xemacs
+
+target which will work with older XEmacs etags (21.5*).
 
 =cut
